e43/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
spec:
  rules:
  - http:
      paths:
      - path: /foo
        pathType: Prefix
        backend:
          service:
            name: foo-service
            port:
              number: 5678
      - path: /bar
        pathType: Prefix
        backend:
          service:
            name: bar-service
            port:
              number: 5678
